--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,5 +41,6 @@ subjects:
 - !lcsh 'France -- History -- Consulate and First Empire, 1799-1815 -- Fiction'
 - !lcsh 'Soldiers of fortune -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: Maurice Tiernay, Soldier of Fortune
 url: http://www.gutenberg.org/ebooks/32425
